// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`id-federation map command integration tests should fail when arguments are not valid 1`] = `
"Unable to perform this operation due to the following problem.
Unknown argument: invalidarg
Command failed due to improper syntax
Did you mean: plugins validate?

Command entered: "idf invalidarg"
Use "zowe idf --help" to view groups, commands, and options.

Response From Service
Error: Unknown argument: invalidarg

Diagnostic Information
Unknown argument: invalidarg
"
`;

exports[`id-federation map command integration tests should fail when arguments are not valid 2`] = `""`;

exports[`id-federation map command integration tests should fail when options are not passed 1`] = `
"
Syntax Error:
Missing Required Option:
--esm (-e)

Option Description:
The ESM product on the target system

Syntax Error:
Missing Required Option:
--registry (-r)

Option Description:
The distributed identities registry (e.g., ldaps://enterprise.com,
ldap://12.34.56.78:389)

Use "zowe idf map --help" to view command description, usage, and options.
"
`;

exports[`id-federation map command integration tests should fail when options are not passed 2`] = `""`;

exports[`id-federation map command integration tests should print the successful creation message with passed args for ACF2 1`] = `
"'idf_ACF2_TST1.jcl' was created. Review and submit this JCL on the system TST1.
"
`;

exports[`id-federation map command integration tests should print the successful creation message with passed args for ACF2 2`] = `
"//IDF JOB (account),CLASS=A,MSGCLASS=X
/*JOBPARM SYSAFF=TST1
//*-------------------------------------------------------------------
//*
//* Zowe CLI ID Federation Plugin
//*
//* This JCL can be used for mapping from a distributed identity to
//* a mainframe identity
//*
//* 1) Validate the job header and make all necessary changes
//*    according to your system environment.
//*
//* 2) Run the JCL on system TST1.
//*
//* Note(s):
//*
//* 1. THE USER ID THAT RUNS THIS JOB MUST HAVE SUFFICIENT AUTHORITY
//*    TO ALTER SECURITY DEFINITIONS
//*
//*-------------------------------------------------------------------
//RUN      EXEC PGM=IKJEFT01,REGION=0M
//SYSTSPRT DD SYSOUT=*
//SYSTSIN     DD DATA,SYMBOLS=JCLONLY
 ACF
 SET PROFILE(USER) DIVISION(IDMAP)
 INSERT mf_jir.ZWEDNMAP IDMAPDN(dist_jirka) -
  IDMAPRN(ldap://12.34.56.78:910) IDLABEL(Jirka)
 INSERT mf_lena.ZWEDNMAP IDMAPDN(dist_lena) -
  IDMAPRN(ldap://12.34.56.78:910) IDLABEL(Lena)
 INSERT mf_pab.ZWEDNMAP IDMAPDN(dist_pablo) -
  IDMAPRN(ldap://12.34.56.78:910) IDLABEL(Pablo)
 INSERT mf_name.ZWEDNMAP IDMAPDN(Dist -
  naaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaame ok) -
  IDMAPRN(ldap://12.34.56.78:910) IDLABEL(Name)
 
 F ACF2,REBUILD(USR),CLASS(P),DIVISION(IDMAP)
 END
/*
"
`;

exports[`id-federation map command integration tests should print the successful creation message with passed args for RACF 1`] = `
"'idf_RACF_TST1.jcl' was created. Review and submit this JCL on the system TST1.
"
`;

exports[`id-federation map command integration tests should print the successful creation message with passed args for RACF 2`] = `
"//IDF JOB (account),CLASS=A,MSGCLASS=X
/*JOBPARM SYSAFF=TST1
//*-------------------------------------------------------------------
//*
//* Zowe CLI ID Federation Plugin
//*
//* This JCL can be used for mapping from a distributed identity to
//* a mainframe identity
//*
//* 1) Validate the job header and make all necessary changes
//*    according to your system environment.
//*
//* 2) Run the JCL on system TST1.
//*
//* Note(s):
//*
//* 1. THE USER ID THAT RUNS THIS JOB MUST HAVE SUFFICIENT AUTHORITY
//*    TO ALTER SECURITY DEFINITIONS
//*
//*-------------------------------------------------------------------
//RUN      EXEC PGM=IKJEFT01,REGION=0M
//SYSTSPRT DD SYSOUT=*
//SYSTSIN     DD DATA,SYMBOLS=JCLONLY
 RACMAP ID(mf_jir) MAP USERDIDFILTER(NAME('dist_jirka')) -
  REGISTRY(NAME('ldap://12.34.56.78:910')) WITHLABEL('Jirka')
 RACMAP ID(mf_lena) MAP USERDIDFILTER(NAME('dist_lena')) -
  REGISTRY(NAME('ldap://12.34.56.78:910')) WITHLABEL('Lena')
 RACMAP ID(mf_pab) MAP USERDIDFILTER(NAME('dist_pablo')) -
  REGISTRY(NAME('ldap://12.34.56.78:910')) WITHLABEL('Pablo')
 RACMAP ID(mf_name) MAP -
  USERDIDFILTER(NAME('Dist naaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-
aaaaaaame ok')) REGISTRY(NAME('ldap://12.34.56.78:910')) -
  WITHLABEL('Name')
 
 SETROPTS RACLIST(IDIDMAP) REFRESH
/*
"
`;

exports[`id-federation map command integration tests should print the successful creation message with passed args for TSS 1`] = `
"'idf_TSS_TST1.jcl' was created. Review and submit this JCL on the system TST1.
"
`;

exports[`id-federation map command integration tests should print the successful creation message with passed args for TSS 2`] = `
"//IDF JOB (account),CLASS=A,MSGCLASS=X
/*JOBPARM SYSAFF=TST1
//*-------------------------------------------------------------------
//*
//* Zowe CLI ID Federation Plugin
//*
//* This JCL can be used for mapping from a distributed identity to
//* a mainframe identity
//*
//* 1) Validate the job header and make all necessary changes
//*    according to your system environment.
//*
//* 2) Run the JCL on system TST1.
//*
//* Note(s):
//*
//* 1. THE USER ID THAT RUNS THIS JOB MUST HAVE SUFFICIENT AUTHORITY
//*    TO ALTER SECURITY DEFINITIONS
//*
//*-------------------------------------------------------------------
//RUN      EXEC PGM=IKJEFT01,REGION=0M
//SYSTSPRT DD SYSOUT=*
//SYSTSIN     DD DATA,SYMBOLS=JCLONLY
 TSS ADD(mf_jir) IDMAP(ZWEDNMAP) IDMAPDN('dist_jirka') -
  IDMAPRN('ldap://12.34.56.78:910') IDLABEL('Jirka')
 TSS ADD(mf_lena) IDMAP(ZWEDNMAP) IDMAPDN('dist_lena') -
  IDMAPRN('ldap://12.34.56.78:910') IDLABEL('Lena')
 TSS ADD(mf_pab) IDMAP(ZWEDNMAP) IDMAPDN('dist_pablo') -
  IDMAPRN('ldap://12.34.56.78:910') IDLABEL('Pablo')
 TSS ADD(mf_name) IDMAP(ZWEDNMAP) -
  IDMAPDN('Dist naaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaame o-
k') IDMAPRN('ldap://12.34.56.78:910') IDLABEL('Name')
/*
"
`;

exports[`id-federation map command integration tests should return command error in case of missing arguments 1`] = `
"
Syntax Error:
No value specified for option:
--system

This option requires a value of type:
string

Option Description:
The target JES system on which the command will be executed

Syntax Error:
Invalid value length for option:
--system

You specified a string of length 0:


The length must be between 1 and 8 (inclusive)

Use "zowe idf map --help" to view command description, usage, and options.
"
`;

exports[`id-federation map command integration tests should return command error in case of missing arguments 2`] = `""`;
